# mythpen

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
.github/: release-template.md
.github/workflows/: build.yml  deploy-pages.yml
doc/: SPEC_1.0.md  design-token.html  index.html
docs/: SPEC_1.0.md  system-prompt-chat.md  system-prompt-writing.md
scripts/: copy-wasm.mjs
server/: ai-adapter.js  db.js  index.js  seed.js  test-tools.js  tools.js
server/prompts/: collab.js  context.js  writing.js
server/routes/: api.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs
src/components/: AIPanel.tsx  BottomStatusbar.tsx  EditorContent.tsx  EditorStatusbar.tsx  EditorToolbar.tsx  MarkdownContent.tsx  NewProjectDialog.tsx  ProjectIcon.tsx  ServerStatusGate.tsx  SettingsDrawer.tsx  Sidebar.tsx  SimpleCreateDialog.tsx  Titlebar.tsx  ToastContainer.tsx
src/hooks/: useDataRefresh.ts  useT.ts  useToast.ts
src/i18n/: en.json  index.ts  zh.json
src/lib/: api.ts  dataEvents.ts  status.ts  useProjectData.ts
src/pages/: About.tsx  Characters.tsx  Consistency.tsx  Dashboard.tsx  ExportPage.tsx  Foreshadows.tsx  Memory.tsx  Outline.tsx  ProjectList.tsx  Relations.tsx  Science.tsx  Timeline.tsx  World.tsx  Writing.tsx
src/stores/: useAgentStore.ts  useChapterStore.ts  useEditorStore.ts  useProjectStore.ts  useSettingsStore.ts  (+2 more)
(+2 files in other folders)
